2019の投稿記事のサムネイルを追加

--- a/_posts/2019-08-07-ttw_post2004.html
+++ b/_posts/2019-08-07-ttw_post2004.html
@@ -3,5 +3,6 @@ layout: post
 title: "五月祭2019(学生談話室編)"
 date: 2019-08-07 09:48:40
 categories: ['event']
+img: 2019/07/IMG_4737_thumbnail.jpg
 ---
 <span style="font-weight: 400;">こんにちは！教養学部理科一類2年の鏡です。</span><br/><br/><span style="font-weight: 400;">今回は5月18日(土)19日(日)の五月祭にて開催された「学生談話室」の模様をお伝えいたします。</span><br/><br/><span style="font-weight: 400;">「学生談話室」は現役工学部生との交流コーナーで、工学部広報アシスタントTtime!のメンバーが主体となって、毎年五月祭やオープンキャンパスで開催しています。</span><br/><br/><span style="font-weight: 400;">中高生やその保護者の方々とお話しできる貴重な機会なので、皆さんの東京大学工学部に関する疑問や、進路に関するお悩みを少しでも解決できればと、私たちも気合を入れて臨んでいます。</span><br/><br/><span style="font-weight: 400;">今年の五月祭では、工学部3号館3階331前ラウンジにて、工学部の各学科の生活や授業、研究などを紹介した展示やパンフレットを見ながら気軽に現役工学部生と話すことができるスペースを作りました。</span><br/><br/><img class="alignnone wp-image-2005 size-medium" src="/assets/images/2019/07/IMG_4737_.jpg" alt="" width="300" height="200" /><br/><br/><span style="font-weight: 400;">東大受験を考えている中高生や進学選択に悩む駒場生など、当日はたくさんの方々にご来場いただきました。来場者の方と直接言葉を交わし、工学部の研究に対する興味関心をお聞きすることで、我々も刺激を受けることができました。工学部OBの方にもお越しいただき、新しい3号館を新鮮に感じておられました。</span><br/><br/><span style="font-weight: 400;">工学部広報誌Ttime!の配布も合わせて行い、我々が想いを込めて内容を充実させ完成させた冊子を多くの方々に手に取っていただくことができました。</span><br/><br/><span style="font-weight: 400;">暑い中「学生談話室」にお越しくださった方々、本当にありがとうございました。</span><br/><br/><span style="font-weight: 400;">次回、オープンキャンパスの「学生談話室」で2019夏号の配布を予定しております。もう一度皆さんにお会いできるのを我々一同、心より楽しみにしております。</span><br/><br/>&nbsp;
