2019年冬号記事のタイトル変更

--- a/_posts/2019-01-24-ttw_post1928.html
+++ b/_posts/2019-01-24-ttw_post1928.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Ttime!冬号冊子が発刊されました！"
+title: "Ttime!2018冬号冊子が発刊されました！"
 date: 2019-01-24 19:43:29
 categories:
   - brochure
