2016年記事のサムネイル追加

--- a/_posts/2016-11-22-ttw_post1572.html
+++ b/_posts/2016-11-22-ttw_post1572.html
@@ -2,5 +2,7 @@
 layout: post
 title: "国際プログラム紹介 その3: Massachusetts Institute of Technology/Harvard University訪問"
 date: 2016-11-22 15:24:47
+categories:
+  - others
 ---
 こんにちは、化学システム工学専攻、 現在修士2年生の柴山です。現在は修士課程にて研究中心の生活を送っています。昨年2015年の秋に、機会を得て海外へ行くプログラムに参加することができたのでTtime!webの方へ記事を投稿したいと思います。<br/><h3>Program File #3</h3><br/><ul><br/>
